# remote-stylus

./: .gitignore  .npmrc  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: bridge.yml  host.yml
bridge/: Cargo.toml  README.md  sdkconfig.defaults
bridge/.cargo/: config.toml
bridge/src/: hidd.rs  hidh.rs  lorem.rs  main.rs  scan.rs  utils.rs
client/: package.json
client/src/components/: App.tsx
client/src/components/ui/: button.tsx  dropdown-menu.tsx  input-otp.tsx
host/: package.json  tailwind.config.mjs  vite.config.ts
host-http/: Cargo.toml
host-http/src/: main.rs
host-http/web/: index.html
host/src/: App.tsx  main.tsx
host/src-tauri/: Cargo.toml
host/src-tauri/src/: main.rs
host/src-tauri/src/services/: pointer.rs
receiver/: index.html  package.json  tsconfig.json  vite.config.ts
receiver/src/: App.tsx  globals.css
receiver/src-tauri/: Cargo.toml  tauri.conf.json
receiver/src-tauri/src/services/: pointer.rs
receiver/src/services/: pointer.ts
sender/: astro.config.mjs  components.json  package.json  tailwind.config.mjs
sender/src/: globals.css
sender/src/components/: App.tsx  ToggleDarkMode.tsx
sender/src/components/ui/: input-otp.tsx
sender/src/layouts/: Layout.astro
sender/src/pages/: index.astro
shared/: package.json  tsconfig.json
shared/src/: index.ts  peer.ts  signaling.ts  utils.ts  video.tsx
signaling/: package.json  schema.sql  tsconfig.json  worker.ts  wrangler.toml
