[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
derive-new = "0.6.0"
esp-idf-svc = "0.48.1"
log = "0.4.21"
once_cell = "1.19.0"

[build-dependencies]
embuild = "0.31.3"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/omasakun/esp-idf-sys" }
