[package]
name = "host-http"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
mime_guess = "2.0.4"
rust-embed = "8.4.0"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.7", features = ["websocket"] }
